Fixing overflow issue with logout

--- a/assets/css/easy_admin.css
+++ b/assets/css/easy_admin.css
@@ -64,8 +64,8 @@ body.easy-admin-menu {
 }
 
 .easy-admin ul.logout {
-  position: fixed;
-  width: 260px;
+  position: absolute;
+  width: 100%;
   bottom: 2%;
 }
 
@@ -118,6 +118,7 @@ body.easy-admin-menu {
 .easy-admin .firstLevel {
   position: absolute;
   width: 100%;
+  height: 100%;
   left: 0;
   -webkit-transition: all .6s ease;
   transition: all .6s ease;
